[tool.poetry]
name = "chouseisan-webhook"
version = "0.1.0"
description = ""
authors = ["coleyon <24493192+coleyon@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-dateutil = "^2.8.2"
tabulate = {extras = ["widechars"], version = "^0.8.9"}
pytz = "^2021.1"
beautifulsoup4 = "^4.9.3"
hashids = "^1.3.1"
lxml = "^4.6.3"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
autoflake = "^1.4"
isort = "^5.9.2"
pytest = "^6.2.4"
black = "^21.7b0"
pytest-cov = "^2.12.1"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
